k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatassist
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatassist
  template:
    metadata:
      labels:
        app: chatassist
    spec:
      containers:
        - name: chatassist
          image: muskanchourasiya/chatassist-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          volumeMounts:
            - name: chroma-storage
              mountPath: /app/chroma  

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5

      volumes:
        - name: chroma-storage
          persistentVolumeClaim:
            claimName: chroma-pvc
